expample1/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Nginx-deployment
spec:
  selector:
    matchlabels:
      app: nginx
    replicas: 3
    template:
      metadata:
        labels:
          app: nginx

      spec:
        containers:
        - name: nginx
          image: nginx:alpine
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "400m"
          readynessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpsocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
          - containerPort: 80
