expample1/pod-debian.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-debian
spec:
  containers:
  - name: pod-debian
    image: debian
    command: ["/bin/sleep", "3650d"]
